add console.logs on events

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@ window.addEventListener("load", function(){ //when page loads
 socket.on('light', function (data) { //get button status from client
   document.getElementById("light").checked = data; //change checkbox according to push button on Raspberry Pi
   socket.emit("light", data); //send push button status to back to server
+  console.log("Checkbox clicked!")
 });
 </script>
 
