--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@ var socket = io(); //load socket.io-client and connect to the host that serves t
 window.addEventListener("load", function(){ //when page loads
   var lightbox = document.getElementById("light");
   lightbox.addEventListener("change", function() { //add event listener for when checkbox changes
-    console.log("Checkbox clicked!")
+    console.log("Checkbox clicked!");
     socket.emit("light", Number(this.checked)); //send button status to server (as 1 or 0)
   });
 });
