change to pi ip address in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   event.preventDefault();
   
   var message = $('textarea#message').val();
-  url = "http://localhost:8080"
+  url = "http://192.168.0.32:8080"
   
   var posting = $.post(url, message)
   
